# Weta

./: README.md
CompilerAssembler/: WetaCompilerAssembler.js  WetaCompilerAssemblerExports.js  browserifyweta.sh
CompilerAssembler/assembler/: AssemblerAst.js  WasmParser.js  WasmParser.par  WetaAssembler.js  WetaAssemblerMain.js  compileassembler.sh  out.txt
CompilerAssembler/assembler/AstNodes/: AsmExpressionNode.js  AsmImmediateNode.js  ConfigsNode.js  StructNode.js
CompilerAssembler/assembler/generate/: WvmGenerator.js
CompilerAssembler/assembler/i18n/: es.json
CompilerAssembler/assembler/process/: AssemblerAstProcessor.js
CompilerAssembler/common/: ConfigNode.js  LibNode.js  ListNode.js  MessageFormatter.js  Token.js  Types.js
CompilerAssembler/lib/: Libraries.js  compile.sh
CompilerAssembler/test/: EncodeI2C.logo  EncodeI2C_simpler.logo  SimpleEEPROM.logo  SimpleMotor.logo  SimpleSend.logo  Turtle.logo  config.logo  my (copy).wasm  my.logo  my.out  my.wasm
ExampleBlocks/: simple_motos.xml
Programmer/: CricketProgrammer.js
doc/: build.sh  custom.xsl  docbookweta.sh  docbookwetaxref.sh
doc/Assembler/: build.sh  docbookassembler.sh  docbookassemblerxref.sh
doc/Logo/: DocBookBugReport.txt  build.sh  docbooklogo.sh  docbooklogoxref.sh
vm/: CMakeLists.txt
vm/src/: CMakeLists.txt  component.mk  weta_defs.h  weta_stack.h  weta_store.c  weta_vm.mk  weta_vm.project
vm/src/hw/: hw.h  hw_adc.h  hw_buzzer.h  hw_dac.h  hw_flash.h  hw_flash_raw.h  hw_gpio.h  hw_i2c.h  hw_motor.h  hw_pwm.h  hw_serial.h  hw_time.h
vm/src/hw/esp32/: hw_adc.c  hw_buzzer.c  hw_dac.c  hw_flash_raw.c  hw_gpio.c  hw_i2c.c  hw_pwm.c  hw_serial.c  hw_time.c
vm/src/hw/esp8266/: Makefile  hw_adc.c  hw_board.c  hw_buzzer.c  hw_endian.c  hw_flash.c  hw_gpio.c  hw_motor.c  hw_stepper.c
vm/src/hw/iflab/: hw_board.c  hw_board.h  hw_servo.c
vm/src/turtle/: weta_turtle_stepper.c
vm/src/type_handlers/: with_bool.c  with_double.c  with_float.c  with_int16.c  with_int8.c  with_string.c  with_uint32.c  with_uint8.c
vm/weta-arduino/: CMakeLists.txt
vm/weta-arduino/cmake/: ArduinoToolchain.cmake
vm/weta-arduino/cmake/Platform/: Arduino.cmake
vm/weta-arduino/main/: CMakeLists.txt  wetamain.cpp
vm/weta-arduino/platform/: weta_platform.h
vm/weta-arduino/platform/boards/: board.cpp  board.h
vm/weta-arduino/platform/boards/adk/: board.cpp  board.h
vm/weta-arduino/platform/mcu/: hw_adc.cpp  hw_buzzer.cpp  hw_dac.cpp  hw_defs.h  hw_endian.c  hw_flash_raw.cpp  hw_gpio.cpp  hw_i2c.cpp  hw_pwm.cpp  hw_serial.cpp  hw_time.cpp
vm/weta-common/: CMakeLists.txt  WvmBaseCodes.h  WvmCodes.h  WvmCommCodes.h  WvmIoCodes.h  WvmMathCodes.h  WvmUiCodes.h  component.mk  weta.c  weta.h  weta_stack.c  weta_store.h
vm/weta-common/hw/: hw.c  hw.h  hw_adc.h  hw_buzzer.h  hw_dac.h  hw_endian.h  hw_flash.c  hw_flash_raw.h  hw_gpio.c  hw_gpio.h  hw_i2c.h  hw_motor.c  hw_motor.h  hw_pins.c  hw_pins.h  hw_pwm.h  hw_serial.c  hw_serial.h  hw_servo.c  hw_servo.h  hw_shifter.c  hw_shifter.h  hw_stepper.c  hw_stepper.h  hw_time.h
vm/weta-common/hw/esp8266/: hw_board.h  hw_i2c.c  hw_serial.c  hw_servo.c  hw_time.c
vm/weta-common/hw/iflab/: hw_adc.c  hw_buzzer.c  hw_dac.c  hw_endian.c  hw_gpio.c  hw_i2c.c  hw_motor.c  hw_serial.c  hw_time.c  machine.c  machine.h  motor-interface.h
vm/weta-common/lib/: lib_comm.c  lib_comm.h  lib_io.c  lib_io.h  lib_math.c  lib_math.h  lib_ui.c  lib_ui.h
vm/weta-common/store/: weta_store.c  weta_store.h  weta_store_flash.c  weta_store_flash.h  weta_store_ram.c  weta_store_ram.h
vm/weta-common/turtle/: weta_turtle.h  weta_turtle_stepper.c
vm/weta-common/type_handlers/: type_handlers.h  with_bool.c  with_double.c  with_float.c  with_int16.c  with_int32.c  with_int8.c  with_stackptr.c  with_string.c  with_uint16.c  with_uint32.c  with_uint8.c
vm/weta-esp/weta-esp-common/: CMakeLists.txt  component.mk  user_webserver.c  user_webserver.h
vm/weta-esp/weta-esp32/: CMakeLists.txt  Makefile  sdkconfig
vm/weta-esp/weta-esp32/main/: component.mk  main.c
vm/weta-esp/weta-esp32/platform/: component.mk  hw_defs.h  weta_platform.h
vm/weta-esp/weta-esp32/platform/arch/: esp32_adc.c  esp32_dac.c  esp32_gpio.c  esp32_i2c.c  esp32_pwm.c  esp32_serial.c  hw_adc.c  hw_dac.c  hw_defs.h  hw_gpio.c  hw_i2c.c  hw_pwm.c  hw_serial.c
vm/weta-esp/weta-esp32/platform/boards/: board.c  board.h
vm/weta-esp/weta-esp32/platform/boards/carlos/: board.h  carlos_board.c  carlos_board.h
vm/weta-esp/weta-esp32/platform/boards/mynano32/: board.c  board.h  mynano32_board.c  mynano32_board.h  nano32_pin_caps.c  nano32_pin_caps.json
vm/weta-esp/weta-esp32/uart/: uart.c  uart.h
vm/weta-esp/weta-esp8266/: CMakeLists (rtos_nonos).txt  CMakeLists.txt
vm/weta-esp/weta-esp8266/main/: user_main.c
vm/weta-esp/weta-esp8266/platform/: weta_platform.h
vm/weta-esp/weta-esp8266/platform/arch/: CMakeLists.txt  espmissingincludes.h  hw_adc.c  hw_buzzer.c  hw_dac.c  hw_defs.h  hw_endian.c  hw_flash_raw.c  hw_gpio.c  hw_i2c.c  hw_pwm.c  hw_serial.c  hw_time.c  uart_util.c  uart_util.h
vm/weta-esp/weta-esp8266/platform/boards/: CMakeLists.txt  board.c  board.h
vm/weta-esp/weta-esp8266/platform/boards/esp01_irobot/: board.c  board.h  eagle.app.v6.ld
vm/weta-esp/weta-esp8266/platform/boards/esp12_hbridge_robot/: board.c  board.h
vm/weta-esp/weta-esp8266/webserver/: CMakeLists.txt  user_webserver.c  user_webserver.h
vm/weta-esp32/: CMakeLists.txt  Makefile  httppost.sh  partitions.csv  sdkconfig
vm/weta-esp32/boards/: board.c  component.mk
vm/weta-esp32/boards/carlos/: board.h
vm/weta-esp32/boards/mynano32/: board.c  board.h
vm/weta-esp32/include/: weta_platform.h
vm/weta-esp32/include/webserver/: user_webserver.h
vm/weta-esp32/main/: Kconfig.projbuild  component.mk  main.c
vm/weta-esp32/platform/: component.mk  weta_platform.h
vm/weta-esp32/platform/boards/: board.h
vm/weta-esp32/platform/boards/carlos/: board.c
vm/weta-esp32/platform/mcu/: hw_buzzer.c  hw_defs.h  hw_flash_raw.c  hw_gpio.c  hw_misc.c  hw_time.c
vm/weta-esp32/webserver/: Kconfig.projbuild  user_webserver.c
(+749 files in other folders)
