cmake_minimum_required(VERSION 3.3)
project(weta_esp)

set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")

set(SOURCE_FILES
    main/main.c
    weta_vm/hw/esp8266/hw_adc.c
    weta_vm/hw/esp8266/hw_board.c
    weta_vm/hw/esp8266/hw_board.h
    weta_vm/hw/esp8266/hw_buzzer.c
    weta_vm/hw/esp8266/hw_dac.c
    weta_vm/hw/esp8266/hw_endian.c
    weta_vm/hw/esp8266/hw_flash.c
    weta_vm/hw/esp8266/hw_gpio.c
    weta_vm/hw/esp8266/hw_i2c.c
    weta_vm/hw/esp8266/hw_motor.c
    weta_vm/hw/esp8266/hw_serial.c
    weta_vm/hw/esp8266/hw_servo.c
    weta_vm/hw/esp8266/hw_stepper.c
    weta_vm/hw/esp8266/hw_time.c
    weta_vm/hw/iflab/hw_adc.c
    weta_vm/hw/iflab/hw_board.c
    weta_vm/hw/iflab/hw_board.h
    weta_vm/hw/iflab/hw_buzzer.c
    weta_vm/hw/iflab/hw_dac.c
    weta_vm/hw/iflab/hw_endian.c
    weta_vm/hw/iflab/hw_gpio.c
    weta_vm/hw/iflab/hw_i2c.c
    weta_vm/hw/iflab/hw_motor.c
    weta_vm/hw/iflab/hw_serial.c
    weta_vm/hw/iflab/hw_servo.c
    weta_vm/hw/iflab/hw_time.c
    weta_vm/hw/iflab/machine.c
    weta_vm/hw/iflab/machine.h
    weta_vm/hw/iflab/motor-interface.h
    weta_vm/hw/hw.c
    weta_vm/hw/hw.h
    weta_vm/hw/hw_adc.h
    weta_vm/hw/hw_buzzer.h
    weta_vm/hw/hw_dac.h
    weta_vm/hw/hw_endian.h
    weta_vm/hw/hw_flash.h
    weta_vm/hw/hw_gpio.h
    weta_vm/hw/hw_i2c.h
    weta_vm/hw/hw_motor.h
    weta_vm/hw/hw_serial.h
    weta_vm/hw/hw_servo.h
    weta_vm/hw/hw_stepper.h
    weta_vm/hw/hw_time.h
    weta_vm/type_handlers/type_handlers.h
    weta_vm/type_handlers/with_bool.c
    weta_vm/type_handlers/with_double.c
    weta_vm/type_handlers/with_float.c
    weta_vm/type_handlers/with_int16.c
    weta_vm/type_handlers/with_int32.c
    weta_vm/type_handlers/with_int8.c
    weta_vm/type_handlers/with_stackptr.c
    weta_vm/type_handlers/with_string.c
    weta_vm/type_handlers/with_uint16.c
    weta_vm/type_handlers/with_uint32.c
    weta_vm/type_handlers/with_uint8.c
    weta_vm/weta.c
    weta_vm/weta.h
    weta_vm/weta_defs.h
    weta_vm/weta_stack.c
    weta_vm/weta_stack.h
    weta_vm/weta_store.c
    weta_vm/weta_store.h
    weta_vm/weta_turtle.c
    weta_vm/weta_turtle.h
    weta_vm/WvmBaseCodes.h
    weta_vm/WvmCodes.h
    weta_vm/WvmCommCodes.h
    weta_vm/WvmIoCodes.h
    weta_vm/WvmMathCodes.h)

add_executable(weta_esp ${SOURCE_FILES})